RESOLVED FIXED118895
[GTK] Fix regression in DumpRenderTree introduced in r152782 by checking if uri is valid
https://bugs.webkit.org/show_bug.cgi?id=118895
Summary [GTK] Fix regression in DumpRenderTree introduced in r152782 by checking if u...
Simon Pena
Reported 2013-07-19 03:51:17 PDT
[GTK] Fix regression in DumpRenderTree introduced in r152782 by checking if uri is valid
Attachments
Patch (3.13 KB, patch)
2013-07-19 03:53 PDT, Simon Pena
no flags
Simon Pena
Comment 1 2013-07-19 03:53:58 PDT
Philippe Normand
Comment 2 2013-07-19 04:04:47 PDT
Comment on attachment 207076 [details] Patch Good catch!
WebKit Commit Bot
Comment 3 2013-07-19 05:17:22 PDT
Comment on attachment 207076 [details] Patch Clearing flags on attachment: 207076 Committed r152897: <http://trac.webkit.org/changeset/152897>
WebKit Commit Bot
Comment 4 2013-07-19 05:17:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.