[GTK] Fix regression in DumpRenderTree introduced in r152782 by checking if uri is valid https://bugs.webkit.org/show_bug.cgi?id=118895

Patch by Simon Pena <simon.pena@samsung.com> on 2013-07-19
Reviewed by Philippe Normand.

In r152782 an uri is used to create an string representation without checking first if it
is valid. That fails later when the string is used to check for existing redirections. This
patch ensures that the uri is valid before using it.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(willSendRequestCallback): Ensure an uri is valid before using it.

Canonical link: https://commits.webkit.org/136749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152897 268f45cc-cd09-0410-ab3c-d52691b4dbfc